# shazamq-operator

./: .gitignore  .helmignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  RELEASE_PROCESS.md  artifacthub-repo.yml  index.html  index.yaml  shazamq-operator-1.0.0.tgz  shazamq-operator-v0.1.0.tgz
.github/workflows/: release.yml
charts/: Chart.yaml  README.md  index.yaml  values.yaml
charts/templates/: NOTES.txt  _helpers.tpl  crds-job.yaml  rbac.yaml  serviceaccount.yaml
charts/templates/crds/: shazamqcluster.yaml
helm/shazamq-operator/: Chart.yaml  README.md  values.yaml
helm/shazamq-operator/templates/: NOTES.txt  deployment.yaml
helm/shazamq-operator/templates/crds/: .helmignore
scripts/: release.sh
src/: crd.rs  main.rs  reconciler.rs
