[package]
name = "shazamq-operator"
version = "0.1.0"
edition = "2021"
authors = ["Murtaza Shajapurwala"]
description = "Kubernetes operator for Shazamq clusters"
license = "Apache-2.0"

[dependencies]
# Kubernetes client and operator runtime
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }
kube-runtime = "0.87"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
schemars = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP
hyper = "0.14"

# Utilities
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

